--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  google_fonts: ^6.2.1
+  dropdown_search: ^5.0.6
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_test:
