--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   google_fonts: ^6.2.1
   dropdown_search: ^5.0.6
   shared_preferences: ^2.3.2
+  signals: ^5.5.0
 
 dev_dependencies:
   flutter_test:
