--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,7 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.7.0-95.0.dev
+  sdk: ^3.3.0
 
 dependencies:
   flutter:
@@ -15,9 +15,10 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   google_fonts: ^6.2.1
-  dropdown_search: ^5.0.6
+  dropdown_search: ^6.0.1
   shared_preferences: ^2.3.2
-  signals: ^5.5.0
+  signals: ^6.0.2
+  material_color_utilities: ^0.11.1
 
 dev_dependencies:
   flutter_test:
